food tables defined

--- a/wedding/detailed.html
+++ b/wedding/detailed.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Seating | Michael&Emily Wedding Info</title>
+    <title>Detailed | Michael&Emily Wedding Info</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
     <meta name="image" property="og:image" content="../assets/img/Linkedin_bg.png">
@@ -103,6 +103,7 @@
 
         .timeline-description {
             margin: 10px 0;
+            text-align: left;
         }
 
         .responsible-person {
@@ -178,7 +179,7 @@
         <div class="intro-content display-table">
             <div class="table-cell">
                 <div class="container">
-                    <h1 class="intro-title mb-4">Michael and Emily </h1>
+                    <h1 class="intro-title mb-4">Michael & Emily </h1>
                     <p class="intro-subtitle"><span class="text-slider-items">04.27.2025, Carmel Indiana,
                             Celebration</span><strong class="text-slider"></strong></p>
                 </div>
@@ -213,7 +214,8 @@
                                         <li>Photographer, DJ</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Vendors</div>
+                                <div class="responsible-person">Aubrey&Brandon Thornsbury, DJ Gustave, Donna Lennox
+                                </div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -225,7 +227,7 @@
                                         <li>First look photos in White Dress</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Photographer</div>
+                                <div class="responsible-person">Couple, Aubrey&Brandon Thornsbury</div>
                             </div>
 
                             <div id="ceremony" class="timeline-entry left">
@@ -239,7 +241,7 @@
                                         <li>Michael ~ take Traditional cloths to car</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Hosts, Michael</div>
+                                <div class="responsible-person">All, Jaelynn Thomas (host)</div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -247,12 +249,31 @@
                                 <div class="timeline-title">Ceremony Starts</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Michael and Jeremy enter</li>
-                                        <li>Processional - Judith Singing</li>
+                                        <li>Michael and Jeremy (enter)</li>
+                                        <li>Processional</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Michael, Jeremy, Judith</div>
+                                <div class="responsible-person">Judith Anane (singing)</div>
                             </div>
+
+                            <div class="timeline-entry right">
+                                <div class="timeline-time">4:10 PM</div>
+                                <div class="timeline-title">Ceremony</div>
+                                <div class="timeline-description">
+                                    <ul>
+                                        <li>Statement of Purpose</li>
+                                        <li>Declaration of Consent</li>
+                                        <li>Sermon</li>
+                                        <li>Exchange of Vows</li>
+                                        <li>Nuptial Kiss & Jumping Broom</li>
+                                        <li>Benediction</li>
+                                        <li>Recessional</li>
+                                        <li>Announcements</li>
+                                    </ul>
+                                </div>
+                                <div class="responsible-person">Jeremy Caskey</div>
+                            </div>
+
 
                             <div id="reception" class="timeline-entry left">
                                 <div class="timeline-time">5:00 PM</div>
@@ -413,20 +434,10 @@
         <section id="seating" class="about-mf sect-pt4 route">
             <div class="container">
                 <div class="title-box text-center">
-                    <h3 class="title-a">Seating Chart</h3>
+                    <h3 class="title-a">Seating</h3>
 
-                    <div id="home" class="intro route bg-image"
-                        style="background-image: url(../assets/img/seating.jpg)">
-                        <div class="overlay-itro"></div>
-                        <div class="intro-content display-table">
-                            <div class="table-cell">
-                                <div class="container">
-                                    <h1 class="intro-title mb-4">Seating</h1>
-                                    <p class="intro-subtitle"><span class="text-slider-items">04.27.2025, Mingle,
-                                            Enjoy</span><strong class="text-slider"></strong></p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="about-img">
+                        <img src="../assets/img/seating.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
 
                     <div class="line-mf"></div>
