--- a/wedding/index.html
+++ b/wedding/index.html
@@ -236,8 +236,6 @@
                   <ul>
                     <li>Guests arrive in the venue</li>
                     <li>Guests seated in Chapel</li>
-                    <li>Hosts get people programs and guide to seats</li>
-                    <li>Michael ~ take Traditional cloths to car</li>
                   </ul>
                 </div>
                 <div class="responsible-person">All, Jaelynn Thomas (host)</div>
@@ -248,11 +246,11 @@
                 <div class="timeline-title">Ceremony Starts</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Michael and Jeremy (enter)</li>
+                    <li>Officiant & Michael enter </li>
                     <li>Processional</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Judith Anane (singing)</div>
+                <div class="responsible-person">Rev. Dr. Jeremy Caskey, Judith Anane (singing)</div>
               </div>
 
               <div class="timeline-entry right">
@@ -270,7 +268,7 @@
                     <li>Announcements</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Jeremy Caskey</div>
+                <div class="responsible-person">Rev. Dr. Jeremy Caskey</div>
               </div>
 
 
@@ -279,13 +277,15 @@
                 <div class="timeline-title">Cocktail Hour & Family Photos</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>DJ Gust ~ Start music [Reference playlist 1]</li>
-                    <li>Friends with couple - Michaels, then Emily’s</li>
-                    <li>Family with couple - Michaels, then Emily’s</li>
-                    <li>Individual with family</li>
+                    <li>Cocktail</li>
+                    <li>Photos - Michael's Family Table #2,#3,#4</li>
+                    <li>Photos - Emily's family Table #15, #14</li>
+                    <li>Photos - Church family #6, #10</li>
+                    <li>Photos - Pittsburgh friends #7, #8</li>
+                    <li>Random Individual photos with friends/family</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: DJ Gust, Photographer</div>
+                <div class="responsible-person">DJ Gustave, Aubrey&Brandon Thornsbury</div>
               </div>
 
               <div class="timeline-entry right">
@@ -297,7 +297,7 @@
                     <li>MC (Michael Byers) ~ Announces for every to be seated</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Michael Byers</div>
+                <div class="responsible-person">Michael Byers (MC)</div>
               </div>
 
               <div class="timeline-entry left">
@@ -305,12 +305,12 @@
                 <div class="timeline-title">Bridal Party & Family Announced In</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Same party that processed will dance to their seats</li>
-                    <li>Couple announced in last | DJ [Reference entrance playlist #2]</li>
-                    <li>MC (Michael Byers) ~ Announces for everyone to be seated</li>
+                    <li>Enter with dancing - Michael's Family Table #2,#3,#4</li>
+                    <li>Enter with dancing - Emily's family Table #15, #14</li>
+                    <li>Couple announced in with dancing</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: DJ, Michael Byers</div>
+                <div class="responsible-person">Michael Byers, DJ Gustave</div>
               </div>
 
               <div class="timeline-entry right">
@@ -319,10 +319,9 @@
                 <div class="timeline-description">
                   <ul>
                     <li>Cut cake</li>
-                    <li>DJ instrumental [Audio]</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Couple, DJ</div>
+                <div class="responsible-person">Michael & Emily Affare</div>
               </div>
 
               <div class="timeline-entry left">
@@ -330,11 +329,10 @@
                 <div class="timeline-title">First Dance</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Couple’s first dance</li>
-                    <li>Short song | dance [ DJ reference first dance song ]</li>
+                    <li>First dance</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Couple, DJ</div>
+                <div class="responsible-person">Couple, DJ Gustave</div>
               </div>
 
               <div class="timeline-entry right">
@@ -342,11 +340,12 @@
                 <div class="timeline-title">Welcome & Blessing</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Kimberley Thomas (bride’s mum) - Welcome</li>
-                    <li>Marlena grabs food for couple</li>
+                    <li>Welcome address</li>
+                    <li>Marlena grabs food for couple #Table 0 during address</li>
+
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Kimberley Thomas, Marlena</div>
+                <div class="responsible-person">Kimberley Thomas, Marlena Thomas</div>
               </div>
 
               <div class="timeline-entry left">
@@ -354,11 +353,17 @@
                 <div class="timeline-title">Serve Time - Dinner Buffet</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>First tables (15 & 4) [Refer to seating chart]</li>
-                    <li>Michael Byers announce tables order for food</li>
+                    <li>Table #15, #14, #9</li>
+                    <li>Table #3,#4, #8 </li>
+                    <li>Table #16,#13, #10 </li>
+                    <li>Table #19 (vendors) </li>
+                    <li>Table #2,#5, #7 </li>
+                    <li>Table #17,#12, #11 </li>
+                    <li>Table #1,#18, #6 </li>
+                    <li>MC announces tables</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Michael Byers</div>
+                <div class="responsible-person">Michael Byers (MC)</div>
               </div>
 
               <div class="timeline-entry right">
