--- a/wedding/index.html
+++ b/wedding/index.html
@@ -371,36 +371,51 @@
                 <div class="timeline-title">Bride & Groom Change Outfits</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Change in Chapel if available.</li>
+                    <li>Couple Change</li>
+                    <li>Eating and music</li>
+                    <li>Announce gift table & favors</li>
+                    <li>Announce to write in Wedding Guest book, add email to receive your photos</li>
+                    <li>Announce traditional wedding</li>
+                    <li>Announce share your photos to Michael - 4129833254</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Couple</div>
+                <div class="responsible-person">Couple, DJ Gustave</div>
               </div>
 
               <div class="timeline-entry left">
                 <div class="timeline-time">7:15 PM</div>
-                <div class="timeline-title">Speeches & Traditional | Cake Serve Time</div>
+                <div class="timeline-title">Toast & Traditional | Cake Serve Time</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Michael explain dress, gift & Ghanaian culture | Samuel</li>
-                    <li>Present gifts to Mummy, Mark Allen & Marlena</li>
-                    <li>Each accepts with toast | Cake is served during this time</li>
+                    <li>Emily & Michael enter and display traditional dresses</li>
+                    <li>Toast by Samuel Affare</li>
+                    <li>Michael's explains traditional process - Toast to family</li>
+                    <li>Stephanie and Sophia present baskets to mummy</li>
+                    <li>Michael gives check to Marlena & Mark Allen</li>
+                    <li>Mark Allen & Mummy ask if they should accept it</li>
+                    <li>Emily confirms they should accept it</li>
+                    <li>Toast by Kimberley Thomas</li>
+                    <li>Toast by Marlena Byers</li>
+                    <li>Toast by Mark Allen Thomas</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Michael, Samuel</div>
+                <div class="responsible-person">Couple, Samuel Affare, Kimberley Thomas, Marlena Byers, Mark Allen
+                  Thomas </div>
               </div>
 
               <div class="timeline-entry right">
                 <div class="timeline-time">7:40 PM</div>
-                <div class="timeline-title">Guests Join in Dancing</div>
+                <div class="timeline-title">Guests Join in Dancing | Candid photos</div>
                 <div class="timeline-description">
                   <ul>
                     <li>Open floor - everyone dance</li>
-                    <li>DJ Gust [Play songs reference open dance playlist]</li>
-                    <li>More candid pictures</li>
+                    <li>DJ Gustave - Playlist Ghana</li>
+                    <li>DJ Gustave - Playlist Requested songs</li>
+                    <li>DJ Gustave - Playlist Black Music</li>
+                    <li>More candid pictures with Couple</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: DJ Gust, Photographer</div>
+                <div class="responsible-person">DJ Gustave, Photographer</div>
               </div>
 
               <div class="timeline-entry left">
@@ -409,11 +424,11 @@
                 <div class="timeline-description">
                   <ul>
                     <li>Bar closes</li>
-                    <li>People depart</li>
-                    <li>Tear down begins for all vendors [can begin earlier at 9pm]</li>
+                    <li>People leave</li>
+                    <li>Tear down</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Vendors</div>
+                <div class="responsible-person">Vendors</div>
               </div>
 
               <div class="timeline-entry right">
@@ -421,11 +436,11 @@
                 <div class="timeline-title">Teardown Complete</div>
                 <div class="timeline-description">
                   <ul>
-                    <li>Same party that processed will dance to their seats</li>
-                    <li>Couple announced in last</li>
+                    <li>Closed</li>
+                    <li>Vendors unplug</li>
                   </ul>
                 </div>
-                <div class="responsible-person">Responsible: Processional Team</div>
+                <div class="responsible-person">Processional Team</div>
               </div>
 
             </div>
