--- a/wedding/index.html
+++ b/wedding/index.html
@@ -278,11 +278,12 @@
                 <div class="timeline-description">
                   <ul>
                     <li>Cocktail</li>
-                    <li>Photos - Michael's Family Table #2,#3,#4</li>
-                    <li>Photos - Emily's family Table #15, #14</li>
-                    <li>Photos - Church family #6, #10</li>
-                    <li>Photos - Pittsburgh friends #7, #8</li>
-                    <li>Random Individual photos with friends/family</li>
+                    <li>Family Photos</li>
+                    <li>Emily's Family Table #15, #14</li>
+                    <li>Michael's Family Table #2,#3,#4</li>
+                    <li>Church Family #6, #10</li>
+                    <li>Pittsburgh friends #7, #8</li>
+                    <li>Random Individual photos</li>
                   </ul>
                 </div>
                 <div class="responsible-person">DJ Gustave, Aubrey&Brandon Thornsbury</div>
