open tables added

--- a/wedding/index.html
+++ b/wedding/index.html
@@ -589,6 +589,8 @@
                     <li>Dorcas Antwi</li>
                     <li>Esther Darkwah</li>
                     <li>Eric Darkwah</li>
+                    <li>Open</li>
+                    <li>Open</li>
                   </ul>
                 </div>
               </div>
@@ -642,6 +644,8 @@
                     <li>James Williams</li>
                     <li>Fallon Morgan</li>
                     <li>Sarah Thomas</li>
+                    <li>Open</li>
+                    <li>Open</li>
                   </ul>
                 </div>
               </div>
@@ -714,8 +718,8 @@
                     <li>Kilynn Trammell's Guest</li>
                     <li>Anyae Lane</li>
                     <li>Byancah Lane</li>
-                    <li>Tyler Wright</li>
-                    <li>Tyler Wright's Wife</li>
+                    <li>Open</li>
+                    <li>Open</li>
                   </ul>
                 </div>
               </div>
