--- a/wedding/index.html
+++ b/wedding/index.html
@@ -483,7 +483,7 @@
                     <li>Yirun Wang</li>
                     <li>Josh Thompson</li>
                     <li>Francis Anim</li>
-                    <li>Guest (Francis Anim)</li>
+                    <li>Esther Gyampo (Open)</li>
                     <li>Yuchen Wu</li>
                     <li>Gary (Zihao Zhu)</li>
                   </ul>
