--- a/wedding/detailed.html
+++ b/wedding/detailed.html
@@ -237,8 +237,6 @@
                                     <ul>
                                         <li>Guests arrive in the venue</li>
                                         <li>Guests seated in Chapel</li>
-                                        <li>Hosts get people programs and guide to seats</li>
-                                        <li>Michael ~ take Traditional cloths to car</li>
                                     </ul>
                                 </div>
                                 <div class="responsible-person">All, Jaelynn Thomas (host)</div>
@@ -249,11 +247,11 @@
                                 <div class="timeline-title">Ceremony Starts</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Michael and Jeremy (enter)</li>
+                                        <li>Officiant & Michael enter </li>
                                         <li>Processional</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Judith Anane (singing)</div>
+                                <div class="responsible-person">Rev. Dr. Jeremy Caskey, Judith Anane (singing)</div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -271,7 +269,7 @@
                                         <li>Announcements</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Jeremy Caskey</div>
+                                <div class="responsible-person">Rev. Dr. Jeremy Caskey</div>
                             </div>
 
 
@@ -280,13 +278,16 @@
                                 <div class="timeline-title">Cocktail Hour & Family Photos</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>DJ Gust ~ Start music [Reference playlist 1]</li>
-                                        <li>Friends with couple - Michaels, then Emily’s</li>
-                                        <li>Family with couple - Michaels, then Emily’s</li>
-                                        <li>Individual with family</li>
+                                        <li>Cocktail</li>
+                                        <li>Family Photos</li>
+                                        <li>Emily's Family Table #15, #14</li>
+                                        <li>Michael's Family Table #2,#3,#4</li>
+                                        <li>Church Family #6, #10</li>
+                                        <li>Pittsburgh friends #7, #8</li>
+                                        <li>Random Individual photos</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: DJ Gust, Photographer</div>
+                                <div class="responsible-person">DJ Gustave, Aubrey&Brandon Thornsbury</div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -295,10 +296,10 @@
                                 <div class="timeline-description">
                                     <ul>
                                         <li>All guests seated</li>
-                                        <li>MC (Michael Byers) ~ Announces for every to be seated</li>
+                                        <li>MC (Michael Byers) seats guests</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Michael Byers</div>
+                                <div class="responsible-person">Michael Byers (MC)</div>
                             </div>
 
                             <div class="timeline-entry left">
@@ -306,12 +307,12 @@
                                 <div class="timeline-title">Bridal Party & Family Announced In</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Same party that processed will dance to their seats</li>
-                                        <li>Couple announced in last | DJ [Reference entrance playlist #2]</li>
-                                        <li>MC (Michael Byers) ~ Announces for everyone to be seated</li>
+                                        <li>Enter with dancing - Michael's Family Table #2,#3,#4</li>
+                                        <li>Enter with dancing - Emily's family Table #15, #14</li>
+                                        <li>Couple announced in with dancing</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: DJ, Michael Byers</div>
+                                <div class="responsible-person">Michael Byers, DJ Gustave</div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -320,10 +321,9 @@
                                 <div class="timeline-description">
                                     <ul>
                                         <li>Cut cake</li>
-                                        <li>DJ instrumental [Audio]</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Couple, DJ</div>
+                                <div class="responsible-person">Michael & Emily Affare</div>
                             </div>
 
                             <div class="timeline-entry left">
@@ -331,11 +331,10 @@
                                 <div class="timeline-title">First Dance</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Couple’s first dance</li>
-                                        <li>Short song | dance [ DJ reference first dance song ]</li>
+                                        <li>First dance</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Couple, DJ</div>
+                                <div class="responsible-person">Couple, DJ Gustave</div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -343,11 +342,12 @@
                                 <div class="timeline-title">Welcome & Blessing</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Kimberley Thomas (bride’s mum) - Welcome</li>
-                                        <li>Marlena grabs food for couple</li>
+                                        <li>Welcome address</li>
+                                        <li>Marlena grabs food for couple #Table 0 during address</li>
+
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Kimberley Thomas, Marlena</div>
+                                <div class="responsible-person">Kimberley Thomas, Marlena Thomas</div>
                             </div>
 
                             <div class="timeline-entry left">
@@ -355,11 +355,17 @@
                                 <div class="timeline-title">Serve Time - Dinner Buffet</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>First tables (15 & 4) [Refer to seating chart]</li>
-                                        <li>Michael Byers announce tables order for food</li>
+                                        <li>Table #15, #14, #9</li>
+                                        <li>Table #3,#4, #8 </li>
+                                        <li>Table #16,#13, #10 </li>
+                                        <li>Table #19 (vendors) </li>
+                                        <li>Table #2,#5, #7 </li>
+                                        <li>Table #17,#12, #11 </li>
+                                        <li>Table #1,#18, #6 </li>
+                                        <li>MC announces tables</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Michael Byers</div>
+                                <div class="responsible-person">Michael Byers (MC)</div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -367,36 +373,53 @@
                                 <div class="timeline-title">Bride & Groom Change Outfits</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Change in Chapel if available.</li>
+                                        <li>Couple Change</li>
+                                        <li>Eating and music</li>
+                                        <li>Announce gift table & favors</li>
+                                        <li>Announce to write in Wedding Guest book, add email to receive your photos
+                                        </li>
+                                        <li>Announce traditional wedding</li>
+                                        <li>Announce share your photos to Michael - 4129833254</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Couple</div>
+                                <div class="responsible-person">Couple, DJ Gustave</div>
                             </div>
 
                             <div class="timeline-entry left">
                                 <div class="timeline-time">7:15 PM</div>
-                                <div class="timeline-title">Speeches & Traditional | Cake Serve Time</div>
+                                <div class="timeline-title">Toast & Traditional | Cake Serve Time</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Michael explain dress, gift & Ghanaian culture | Samuel</li>
-                                        <li>Present gifts to Mummy, Mark Allen & Marlena</li>
-                                        <li>Each accepts with toast | Cake is served during this time</li>
+                                        <li>Emily & Michael enter and display traditional dresses</li>
+                                        <li>Toast by Samuel Affare</li>
+                                        <li>Michael's explains traditional process - Toast to family</li>
+                                        <li>Stephanie and Sophia present baskets to mummy</li>
+                                        <li>Michael gives check to Marlena & Mark Allen</li>
+                                        <li>Mark Allen & Mummy ask if they should accept it</li>
+                                        <li>Emily confirms they should accept it</li>
+                                        <li>Toast by Kimberley Thomas</li>
+                                        <li>Toast by Marlena Byers</li>
+                                        <li>Toast by Mark Allen Thomas</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Michael, Samuel</div>
+                                <div class="responsible-person">Couple, Samuel Affare, Kimberley Thomas, Marlena Byers,
+                                    Mark Allen
+                                    Thomas </div>
                             </div>
 
                             <div class="timeline-entry right">
                                 <div class="timeline-time">7:40 PM</div>
-                                <div class="timeline-title">Guests Join in Dancing</div>
+                                <div class="timeline-title">Guests Join in Dancing | Candid photos</div>
                                 <div class="timeline-description">
                                     <ul>
                                         <li>Open floor - everyone dance</li>
-                                        <li>DJ Gust [Play songs reference open dance playlist]</li>
-                                        <li>More candid pictures</li>
+                                        <li>DJ Gustave - Playlist Ghana</li>
+                                        <li>DJ Gustave - Playlist Requested songs</li>
+                                        <li>DJ Gustave - Playlist Black Music</li>
+                                        <li>More candid pictures with Couple</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: DJ Gust, Photographer</div>
+                                <div class="responsible-person">DJ Gustave, Photographer</div>
                             </div>
 
                             <div class="timeline-entry left">
@@ -405,11 +428,11 @@
                                 <div class="timeline-description">
                                     <ul>
                                         <li>Bar closes</li>
-                                        <li>People depart</li>
-                                        <li>Tear down begins for all vendors [can begin earlier at 9pm]</li>
+                                        <li>People leave</li>
+                                        <li>Tear down</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Vendors</div>
+                                <div class="responsible-person">Vendors</div>
                             </div>
 
                             <div class="timeline-entry right">
@@ -417,11 +440,11 @@
                                 <div class="timeline-title">Teardown Complete</div>
                                 <div class="timeline-description">
                                     <ul>
-                                        <li>Same party that processed will dance to their seats</li>
-                                        <li>Couple announced in last</li>
+                                        <li>Closed</li>
+                                        <li>Vendors unplug</li>
                                     </ul>
                                 </div>
-                                <div class="responsible-person">Responsible: Processional Team</div>
+                                <div class="responsible-person">Processional Team</div>
                             </div>
 
                         </div>
@@ -463,7 +486,7 @@
                                         <li>Yirun Wang</li>
                                         <li>Josh Thompson</li>
                                         <li>Francis Anim</li>
-                                        <li>Guest (Francis Anim)</li>
+                                        <li>Esther Gyampo (Open)</li>
                                         <li>Yuchen Wu</li>
                                         <li>Gary (Zihao Zhu)</li>
                                     </ul>
@@ -569,6 +592,8 @@
                                         <li>Dorcas Antwi</li>
                                         <li>Esther Darkwah</li>
                                         <li>Eric Darkwah</li>
+                                        <li>Open</li>
+                                        <li>Open</li>
                                     </ul>
                                 </div>
                             </div>
@@ -622,6 +647,8 @@
                                         <li>James Williams</li>
                                         <li>Fallon Morgan</li>
                                         <li>Sarah Thomas</li>
+                                        <li>Open</li>
+                                        <li>Open</li>
                                     </ul>
                                 </div>
                             </div>
@@ -694,8 +721,8 @@
                                         <li>Kilynn Trammell's Guest</li>
                                         <li>Anyae Lane</li>
                                         <li>Byancah Lane</li>
-                                        <li>Tyler Wright</li>
-                                        <li>Tyler Wright's Wife</li>
+                                        <li>Open</li>
+                                        <li>Open</li>
                                     </ul>
                                 </div>
                             </div>
