--- a/wedding/index.html
+++ b/wedding/index.html
@@ -295,7 +295,7 @@
                 <div class="timeline-description">
                   <ul>
                     <li>All guests seated</li>
-                    <li>MC (Michael Byers) ~ Announces for every to be seated</li>
+                    <li>MC (Michael Byers) seats guests</li>
                   </ul>
                 </div>
                 <div class="responsible-person">Michael Byers (MC)</div>
